2007-08-05  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* configure.ac, Makefile.am, po, src/Makefile.am, src/main.cpp,
	src/resources/gettext.h: Added support for internationalization.
	* src/gui/inventorywindow.cpp: Marked a few strings as translatable for
	testing purpose.
	* po/tmw.pot: Generated the main template.
	* po/LINGUAS, po/fr.po: Added the french translation.

2007-08-01  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/item.cpp, src/item.h: Fixed update of equipment flag, so that
	items can be equipped properly.

2007-07-31  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/equipmenthandler.cpp, src/net/equipmenthandler.h,
	src/Makefile.am, src/game.h, src/game.cpp: Deleted dead handler.
	* src/net/buysellhandler.cpp, src/net/skillhandler.cpp,
	src/net/protocol.h: No need to compile legacy handlers.
	* src/localplayer.cpp, src/item.cpp, src/inventory.h,
	src/gui/trade.cpp, src/gui/equipmentwindow.cpp, src/item.h,
	src/gui/inventorywindow.cpp, src/gui/itemcontainer.cpp,
	src/gui/trade.h, src/gui/popupmenu.cpp, src/inventory.cpp,
	src/equipment.h, src/net/tradehandler.cpp, src/equipment.cpp,
	src/localplayer.h: Removed legacy inventory code.
	* src/net/inventoryhandler.cpp: Added display of equipment.

2007-07-29  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* CMake/Modules/FindLibXml2.cmake, CMake/Modules/FindLibcurl.cmake,
	src/CMakeLists.txt: Switch to upstream CMake modules for libxml2 and
	curl.

2007-07-29  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/localplayer.cpp, src/gui/trade.cpp, src/net/tradehandler.cpp,
	src/net/gameserver/player.h, src/net/gameserver/player.cpp,
	src/net/protocol.h: Converted trading to new server.

2007-07-25  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/resources/image.cpp: Added support for subimages of subimages.
	* src/gui/equipmentwindow.cpp, src/gui/button.cpp, src/gui/slider.cpp,
	src/gui/widgets/resizegrip.cpp, src/gui/widgets/dropdown.cpp,