@@ -1,0 +1,53 @@
+/*
+ *  The Mana World
+ *  Copyright 2007 The Mana World Development Team
+ *
+ *  This file is part of The Mana World.
+ *
+ *  The Mana World is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  any later version.
+ *
+ *  The Mana World is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with The Mana World; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ *  $Id$
+ */
+
+#ifndef _TMW_UTILS_TOSTRING_H
+#define _TMW_UTISL_TOSTRING_H
+
+#include <cstdarg>
+
+#include "strprintf.h"
+
+std::string strprintf(char const *format, ...)
+{
+    char buf[256];
+    va_list(args);
+    va_start(args, format);
+    int nb = vsnprintf(buf, 256, format, args);
+    va_end(args);
+    if (nb < 256)
+    {
+        return buf;
+    }
+    // The static size was not big enough, try again with a dynamic allocation.
+    ++nb;
+    char *buf2 = new char[nb];
+    va_start(args, format);
+    vsnprintf(buf2, nb, format, args);
+    va_end(args);
+    std::string res(buf2);
+    delete [] buf2;
+    return res;
+}
+
+#endif
